--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
       </section>
 
       <!-- Fiches produits -->
-      <section class="fiches"></section>
+      <section class="fiches">
+        <div class="abordables">
+          <p>Pièces abordables :</p>
+        </div>
+        <div class="disponibles">
+          <p>Pièces disponibles :</p>
+        </div>
+      </section>
     </main>
   </body>
 
